# Lattice-

./: .env.example  .gitignore  AGENT_TICKETS.md  BUILD_PLAN.md  Dockerfile  IDEAS.md  MILESTONES.md  README.md  RESUME.md  pyproject.toml  requirements-dev.txt  requirements.txt
cli/: README.md  __main__.py
composition/: README.md  export.py  pool.py  regen.py  scene_dag.py  stitch.py  video.py
core/: README.md  cache.py  config.py  console.py  llm.py  textutil.py
docs/: PLAN.md
editing/: README.md  _common.py  arrange.py  history.py  narration_edit.py  tweak.py
eval/: README.md  battery.py  score.py
generation/: README.md  codegen.py  guardrails.py  lattice_scene.py  scene_spec.py  style.py
narration/: README.md  captions.py  narrate.py  script.py  tts.py
planner/: README.md  approval.py  expand.py  outline.py
prds/: PRD-00-overview.md  PRD-phase-0.md  PRD-phase-1.md  PRD-phase-2.md  PRD-phase-3.md  PRD-phase-4.md  PRD-phase-5.md  PRD-phase-6.md  README.md
prompts/: README.md  codegen-narrated.md  codegen.md  compile-repair.md  critique-fix.md  lattice-codegen-narrated.md  lattice-codegen.md  loader.py  manim-conventions.md  narration.md  outline.md  scene-spec.md  style-spec.md  tweak-spec.md  vision-critic.md
reference/: README.md  related-projects.md
render/: README.md  sample_scene.py  sandbox.py  worker.py
scripts/: README.md  cost.py  edit_scenes.py  gen_scene.py  generate_video.py  narrate.py  regen_scene.py  render_sample.py  render_sandbox.py  run_eval.py  serve.py  setup_env.py  test_video.py
tests/: README.md  conftest.py  test_m0.py  (+33 more)
(+25 files in other folders)
